--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,8 @@ buildscript {
 
 allprojects {
     repositories {
+        // Add jitpack repository (added by tipsi-stripe)
+        maven { url "https://jitpack.io" }
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
