--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,7 @@ platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'cosmetics' do
+  pod 'Stripe', '~> 14.0.0'
   # Pods for cosmetics
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
@@ -27,6 +28,8 @@ target 'cosmetics' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+
+  pod 'tipsi-stripe', :path => '../node_modules/tipsi-stripe'
 
   target 'cosmeticsTests' do
     inherit! :search_paths
