--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "tipsi-stripe": "^7.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
