--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-drawer-layout-polyfill": "^2.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
