--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,7 +191,7 @@ dependencies {
     implementation project(':tipsi-stripe')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    compile project(':tipsi-stripe')
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
       debugImplementation files(hermesPath + "hermes-debug.aar")
