--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint",
+    "flow": "flow"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
+    "flow-bin": "^0.107.0",
+    "mocha": "^6.2.0",
     "native-base": "^2.13.4",
     "react": "16.8.6",
     "react-native": "0.60.4",
@@ -18,17 +21,18 @@
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
-    "tipsi-stripe": "^7.5.1"
+    "tipsi-stripe": "^7.5.1",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.0",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
-    "prettier": "1.18.2",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
